--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">pmdm-mayo</string>
+    <string name="email_ejemplo_com">email@ejemplo.com</string>
+    <string name="dni">DNI</string>
 </resources>
